<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.tuananh.gridviewcustom.ui.activity.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="@dimen/padding_small"
        android:text="@string/custom_grid_view"
        android:textSize="@dimen/text_size"/>

    <Button
        android:id="@+id/button_custom_text_with_layout_default"
        style="@style/button_activity"
        android:text="@string/text_default"/>

    <Button
        android:id="@+id/button_custom_text_with_layout_custom_one_text"
        style="@style/button_activity"
        android:text="@string/text_custom_one_text"/>

    <Button
        android:id="@+id/button_custom_text_with_layout_custom_more_text"
        style="@style/button_activity"
        android:text="@string/text_custom_more_text"/>

    <Button
        android:id="@+id/button_custom_image"
        style="@style/button_activity"
        android:text="@string/image_custom"/>

    <Button
        android:id="@+id/button_custom_image_and_text"
        style="@style/button_activity"
        android:text="@string/image_and_text"/>

</LinearLayout>
